college prj/force-app/main/default/objects/Book__c/fields/Available_Book__c.field-meta.xml
<CustomField>
    <fullName>Available_Book__c</fullName>
    <formula>5- Books_Taken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Books</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>