college prj/force-app/main/default/objects/Book__c/fields/Available_Books__c.field-meta.xml
<CustomField>
    <fullName>Available_Books__c</fullName>
    <label>Available Books</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>