college prj/force-app/main/default/objects/Book__c/fields/Books_Taken__c.field-meta.xml
<CustomField>
    <fullName>Books_Taken__c</fullName>
    <label>Books Taken</label>
    <summarizedField>Books_Issue__c.books_taken__c</summarizedField>
    <summaryForeignKey>Books_Issue__c.Book__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>