college prj/force-app/main/default/objects/Book__c/validationRules/Books_Unavailable.validationRule-meta.xml
<ValidationRule>
    <fullName>Books_Unavailable</fullName>
    <active>true</active>
    <errorConditionFormula>Available_Books__c =0</errorConditionFormula>
    <errorMessage>Books are not available</errorMessage>
</ValidationRule>